@@ -20,6 +20,20 @@ end_package
 
 begin_import
 import|import
+name|com
+operator|.
+name|google
+operator|.
+name|common
+operator|.
+name|annotations
+operator|.
+name|VisibleForTesting
+import|;
+end_import
+
+begin_import
+import|import
 name|java
 operator|.
 name|io
@@ -96,6 +110,16 @@ name|java
 operator|.
 name|util
 operator|.
+name|Calendar
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
 name|Date
 import|;
 end_import
@@ -107,6 +131,26 @@ operator|.
 name|util
 operator|.
 name|TimeZone
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|Timer
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|TimerTask
 import|;
 end_import
 
@@ -220,7 +264,35 @@ name|hadoop
 operator|.
 name|fs
 operator|.
+name|LocatedFileStatus
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|fs
+operator|.
 name|Path
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|fs
+operator|.
+name|RemoteIterator
 import|;
 end_import
 
@@ -295,7 +367,7 @@ import|;
 end_import
 
 begin_comment
-comment|/**  * This class is a metrics sink that uses  * {@link org.apache.hadoop.fs.FileSystem} to write the metrics logs.  Every  * hour a new directory will be created under the path specified by the  *<code>basepath</code> property. All metrics will be logged to a file in the  * current hour's directory in a file named&lt;hostname&gt;.log, where  *&lt;hostname&gt; is the name of the host on which the metrics logging  * process is running. The base path is set by the  *<code>&lt;prefix&gt;.sink.&lt;instance&gt;.basepath</code> property.  The  * time zone used to create the current hour's directory name is GMT.  If the  *<code>basepath</code> property isn't specified, it will default to  *&quot;/tmp&quot;, which is the temp directory on whatever default file  * system is configured for the cluster.  *  * The<code>&lt;prefix&gt;.sink.&lt;instance&gt;.ignore-error</code> property  * controls whether an exception is thrown when an error is encountered writing  * a log file.  The default value is<code>true</code>.  When set to  *<code>false</code>, file errors are quietly swallowed.  *  * The primary use of this class is for logging to HDFS.  As it uses  * {@link org.apache.hadoop.fs.FileSystem} to access the target file system,  * however, it can be used to write to the local file system, Amazon S3, or any  * other supported file system.  The base path for the sink will determine the  * file system used.  An unqualified path will write to the default file system  * set by the configuration.  *  * Not all file systems support the ability to append to files.  In file systems  * without the ability to append to files, only one writer can write to a file  * at a time.  To allow for concurrent writes from multiple daemons on a single  * host, the<code>source</code> property should be set to the name of the  * source daemon, e.g.<i>namenode</i>.  The value of the<code>source</code>  * property should typically be the same as the property's prefix.  If this  * property is not set, the source is taken to be<i>unknown</i>.  *  * Instead of appending to an existing file, by default the sink  * will create a new file with a suffix of&quot;.&lt;n&gt;&quet;, where  *<i>n</i> is the next lowest integer that isn't already used in a file name,  * similar to the Hadoop daemon logs.  NOTE: the file with the<b>highest</b>  * sequence number is the<b>newest</b> file, unlike the Hadoop daemon logs.  *  * For file systems that allow append, the sink supports appending to the  * existing file instead. If the<code>allow-append</code> property is set to  * true, the sink will instead append to the existing file on file systems that  * support appends. By default, the<code>allow-append</code> property is  * false.  *  * Note that when writing to HDFS with<code>allow-append</code> set to true,  * there is a minimum acceptable number of data nodes.  If the number of data  * nodes drops below that minimum, the append will succeed, but reading the  * data will fail with an IOException in the DataStreamer class.  The minimum  * number of data nodes required for a successful append is generally 2 or 3.  *  * Note also that when writing to HDFS, the file size information is not updated  * until the file is closed (e.g. at the top of the hour) even though the data  * is being written successfully. This is a known HDFS limitation that exists  * because of the performance cost of updating the metadata.  See  *<a href="https://issues.apache.org/jira/browse/HDFS-5478">HDFS-5478</a>.  */
+comment|/**  *<p>This class is a metrics sink that uses  * {@link org.apache.hadoop.fs.FileSystem} to write the metrics logs.  Every  * hour a new directory will be created under the path specified by the  *<code>basepath</code> property. All metrics will be logged to a file in the  * current hour's directory in a file named&lt;hostname&gt;.log, where  *&lt;hostname&gt; is the name of the host on which the metrics logging  * process is running. The base path is set by the  *<code>&lt;prefix&gt;.sink.&lt;instance&gt;.basepath</code> property.  The  * time zone used to create the current hour's directory name is GMT.  If the  *<code>basepath</code> property isn't specified, it will default to  *&quot;/tmp&quot;, which is the temp directory on whatever default file  * system is configured for the cluster.</p>  *  *<p>The<code>&lt;prefix&gt;.sink.&lt;instance&gt;.ignore-error</code>  * property controls whether an exception is thrown when an error is encountered  * writing a log file.  The default value is<code>true</code>.  When set to  *<code>false</code>, file errors are quietly swallowed.</p>  *  *<p>The primary use of this class is for logging to HDFS.  As it uses  * {@link org.apache.hadoop.fs.FileSystem} to access the target file system,  * however, it can be used to write to the local file system, Amazon S3, or any  * other supported file system.  The base path for the sink will determine the  * file system used.  An unqualified path will write to the default file system  * set by the configuration.</p>  *  *<p>Not all file systems support the ability to append to files.  In file  * systems without the ability to append to files, only one writer can write to  * a file at a time.  To allow for concurrent writes from multiple daemons on a  * single host, the<code>source</code> property should be set to the name of  * the source daemon, e.g.<i>namenode</i>.  The value of the  *<code>source</code> property should typically be the same as the property's  * prefix.  If this property is not set, the source is taken to be  *<i>unknown</i>.</p>  *  *<p>Instead of appending to an existing file, by default the sink  * will create a new file with a suffix of&quot;.&lt;n&gt;&quet;, where  *<i>n</i> is the next lowest integer that isn't already used in a file name,  * similar to the Hadoop daemon logs.  NOTE: the file with the<b>highest</b>  * sequence number is the<b>newest</b> file, unlike the Hadoop daemon logs.</p>  *  *<p>For file systems that allow append, the sink supports appending to the  * existing file instead. If the<code>allow-append</code> property is set to  * true, the sink will instead append to the existing file on file systems that  * support appends. By default, the<code>allow-append</code> property is  * false.</p>  *  *<p>Note that when writing to HDFS with<code>allow-append</code> set to true,  * there is a minimum acceptable number of data nodes.  If the number of data  * nodes drops below that minimum, the append will succeed, but reading the  * data will fail with an IOException in the DataStreamer class.  The minimum  * number of data nodes required for a successful append is generally 2 or  * 3.</p>  *  *<p>Note also that when writing to HDFS, the file size information is not  * updated until the file is closed (e.g. at the top of the hour) even though  * the data is being written successfully. This is a known HDFS limitation that  * exists because of the performance cost of updating the metadata.  See  *<a href="https://issues.apache.org/jira/browse/HDFS-5478">HDFS-5478</a>.</p>  */
 end_comment
 
 begin_class
@@ -391,6 +463,16 @@ literal|"GMT"
 argument_list|)
 argument_list|)
 decl_stmt|;
+DECL|field|lock
+specifier|private
+specifier|final
+name|Object
+name|lock
+init|=
+operator|new
+name|Object
+argument_list|()
+decl_stmt|;
 DECL|field|source
 specifier|private
 name|String
@@ -439,6 +521,32 @@ DECL|field|currentFSOutStream
 specifier|private
 name|FSDataOutputStream
 name|currentFSOutStream
+decl_stmt|;
+DECL|field|flushTimer
+specifier|private
+name|Timer
+name|flushTimer
+decl_stmt|;
+annotation|@
+name|VisibleForTesting
+DECL|field|isTest
+specifier|protected
+specifier|static
+name|boolean
+name|isTest
+init|=
+literal|false
+decl_stmt|;
+annotation|@
+name|VisibleForTesting
+DECL|field|hasFlushed
+specifier|protected
+specifier|static
+specifier|volatile
+name|boolean
+name|hasFlushed
+init|=
+literal|false
 decl_stmt|;
 annotation|@
 name|Override
@@ -586,6 +694,16 @@ name|fileSystem
 argument_list|)
 expr_stmt|;
 block|}
+name|flushTimer
+operator|=
+operator|new
+name|Timer
+argument_list|(
+literal|"RollingFileSystemSink Flusher"
+argument_list|,
+literal|true
+argument_list|)
+expr_stmt|;
 block|}
 comment|/**    * Test whether the file system supports append and return the answer.    * @param fs the target file system    */
 DECL|method|checkAppend (FileSystem fs)
@@ -650,6 +768,13 @@ parameter_list|()
 throws|throws
 name|MetricsException
 block|{
+name|Date
+name|now
+init|=
+operator|new
+name|Date
+argument_list|()
+decl_stmt|;
 name|String
 name|currentDir
 init|=
@@ -657,9 +782,7 @@ name|DATE_FORMAT
 operator|.
 name|format
 argument_list|(
-operator|new
-name|Date
-argument_list|()
+name|now
 argument_list|)
 decl_stmt|;
 name|Path
@@ -693,10 +816,9 @@ name|currentDirPath
 argument_list|)
 condition|)
 block|{
-name|currentDirPath
-operator|=
-name|path
-expr_stmt|;
+comment|// Close the stream. This step could have been handled already by the
+comment|// flusher thread, but if it has, the PrintStream will just swallow the
+comment|// exception, which is fine.
 if|if
 condition|(
 name|currentOutStream
@@ -710,6 +832,10 @@ name|close
 argument_list|()
 expr_stmt|;
 block|}
+name|currentDirPath
+operator|=
+name|path
+expr_stmt|;
 try|try
 block|{
 name|rollLogDir
@@ -724,13 +850,147 @@ parameter_list|)
 block|{
 name|throwMetricsException
 argument_list|(
-literal|"Failed to creating new log file"
+literal|"Failed to create new log file"
 argument_list|,
 name|ex
 argument_list|)
 expr_stmt|;
 block|}
+name|scheduleFlush
+argument_list|(
+name|now
+argument_list|)
+expr_stmt|;
 block|}
+block|}
+comment|/**    * Schedule the current hour's directory to be flushed at the top of the next    * hour. If this ends up running after the top of the next hour, it will    * execute immediately.    *    * @param now the current time    */
+DECL|method|scheduleFlush (Date now)
+specifier|private
+name|void
+name|scheduleFlush
+parameter_list|(
+name|Date
+name|now
+parameter_list|)
+block|{
+comment|// Store the current currentDirPath to close later
+specifier|final
+name|PrintStream
+name|toClose
+init|=
+name|currentOutStream
+decl_stmt|;
+name|Calendar
+name|next
+init|=
+name|Calendar
+operator|.
+name|getInstance
+argument_list|()
+decl_stmt|;
+name|next
+operator|.
+name|setTime
+argument_list|(
+name|now
+argument_list|)
+expr_stmt|;
+if|if
+condition|(
+name|isTest
+condition|)
+block|{
+comment|// If we're running unit tests, flush after a short pause
+name|next
+operator|.
+name|add
+argument_list|(
+name|Calendar
+operator|.
+name|MILLISECOND
+argument_list|,
+literal|400
+argument_list|)
+expr_stmt|;
+block|}
+else|else
+block|{
+comment|// Otherwise flush at the top of the hour
+name|next
+operator|.
+name|set
+argument_list|(
+name|Calendar
+operator|.
+name|SECOND
+argument_list|,
+literal|0
+argument_list|)
+expr_stmt|;
+name|next
+operator|.
+name|set
+argument_list|(
+name|Calendar
+operator|.
+name|MINUTE
+argument_list|,
+literal|0
+argument_list|)
+expr_stmt|;
+name|next
+operator|.
+name|add
+argument_list|(
+name|Calendar
+operator|.
+name|HOUR
+argument_list|,
+literal|1
+argument_list|)
+expr_stmt|;
+block|}
+name|flushTimer
+operator|.
+name|schedule
+argument_list|(
+operator|new
+name|TimerTask
+argument_list|()
+block|{
+annotation|@
+name|Override
+specifier|public
+name|void
+name|run
+parameter_list|()
+block|{
+synchronized|synchronized
+init|(
+name|lock
+init|)
+block|{
+comment|// This close may have already been done by a putMetrics() call. If it
+comment|// has, the PrintStream will swallow the exception, which is fine.
+name|toClose
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+block|}
+name|hasFlushed
+operator|=
+literal|true
+expr_stmt|;
+block|}
+block|}
+argument_list|,
+name|next
+operator|.
+name|getTime
+argument_list|()
+argument_list|)
+expr_stmt|;
 block|}
 comment|/**    * Create a new directory based on the current hour and a new log file in    * that directory.    *    * @throws IOException thrown if an error occurs while creating the    * new directory or new log file    */
 DECL|method|rollLogDir ()
@@ -813,10 +1073,12 @@ name|currentAttempt
 init|=
 name|initial
 decl_stmt|;
+comment|// Start at 0 so that if the base filname exists, we start with the suffix
+comment|// ".1".
 name|int
 name|id
 init|=
-literal|1
+literal|0
 decl_stmt|;
 while|while
 condition|(
@@ -881,6 +1143,15 @@ name|currentAttempt
 argument_list|)
 condition|)
 block|{
+name|id
+operator|=
+name|getNextIdToTry
+argument_list|(
+name|initial
+argument_list|,
+name|id
+argument_list|)
+expr_stmt|;
 name|currentAttempt
 operator|=
 operator|new
@@ -896,10 +1167,6 @@ operator|+
 name|id
 argument_list|)
 expr_stmt|;
-name|id
-operator|+=
-literal|1
-expr_stmt|;
 block|}
 else|else
 block|{
@@ -909,6 +1176,178 @@ throw|;
 block|}
 block|}
 block|}
+block|}
+comment|/**    * Return the next ID suffix to use when creating the log file. This method    * will look at the files in the directory, find the one with the highest    * ID suffix, and 1 to that suffix, and return it. This approach saves a full    * linear probe, which matters in the case where there are a large number of    * log files.    *    * @param initial the base file path    * @param lastId the last ID value that was used    * @return the next ID to try    * @throws IOException thrown if there's an issue querying the files in the    * directory    */
+DECL|method|getNextIdToTry (Path initial, int lastId)
+specifier|private
+name|int
+name|getNextIdToTry
+parameter_list|(
+name|Path
+name|initial
+parameter_list|,
+name|int
+name|lastId
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+name|RemoteIterator
+argument_list|<
+name|LocatedFileStatus
+argument_list|>
+name|files
+init|=
+name|fileSystem
+operator|.
+name|listFiles
+argument_list|(
+name|currentDirPath
+argument_list|,
+literal|true
+argument_list|)
+decl_stmt|;
+name|String
+name|base
+init|=
+name|initial
+operator|.
+name|toString
+argument_list|()
+decl_stmt|;
+name|int
+name|id
+init|=
+name|lastId
+decl_stmt|;
+while|while
+condition|(
+name|files
+operator|.
+name|hasNext
+argument_list|()
+condition|)
+block|{
+name|String
+name|file
+init|=
+name|files
+operator|.
+name|next
+argument_list|()
+operator|.
+name|getPath
+argument_list|()
+operator|.
+name|getName
+argument_list|()
+decl_stmt|;
+if|if
+condition|(
+name|file
+operator|.
+name|startsWith
+argument_list|(
+name|base
+argument_list|)
+condition|)
+block|{
+name|int
+name|fileId
+init|=
+name|extractId
+argument_list|(
+name|file
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|fileId
+operator|>
+name|id
+condition|)
+block|{
+name|id
+operator|=
+name|fileId
+expr_stmt|;
+block|}
+block|}
+block|}
+comment|// Return either 1 more than the highest we found or 1 more than the last
+comment|// ID used (if no ID was found).
+return|return
+name|id
+operator|+
+literal|1
+return|;
+block|}
+comment|/**    * Extract the ID from the suffix of the given file name.    *    * @param file the file name    * @return the ID or -1 if no ID could be extracted    */
+DECL|method|extractId (String file)
+specifier|private
+name|int
+name|extractId
+parameter_list|(
+name|String
+name|file
+parameter_list|)
+block|{
+name|int
+name|index
+init|=
+name|file
+operator|.
+name|lastIndexOf
+argument_list|(
+literal|"."
+argument_list|)
+decl_stmt|;
+name|int
+name|id
+init|=
+operator|-
+literal|1
+decl_stmt|;
+comment|// A hostname has to have at least 1 character
+if|if
+condition|(
+name|index
+operator|>
+literal|0
+condition|)
+block|{
+try|try
+block|{
+name|id
+operator|=
+name|Integer
+operator|.
+name|parseInt
+argument_list|(
+name|file
+operator|.
+name|substring
+argument_list|(
+name|index
+operator|+
+literal|1
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|NumberFormatException
+name|ex
+parameter_list|)
+block|{
+comment|// This can happen if there's no suffix, but there is a dot in the
+comment|// hostname.  Just ignore it.
+block|}
+block|}
+return|return
+name|id
+return|;
 block|}
 comment|/**    * Create a new log file and return the {@link FSDataOutputStream}. If a    * file with the specified path already exists, open the file for append    * instead.    *    * Once the file is open, update {@link #currentFSOutStream},    * {@link #currentOutStream}, and {@#link #currentFile} are set appropriately.    *    * @param initial the target path    * @throws IOException thrown if the call to see the append operation fails.    */
 DECL|method|createOrAppendLogFile (Path targetFile)
@@ -1034,6 +1473,11 @@ parameter_list|(
 name|MetricsRecord
 name|record
 parameter_list|)
+block|{
+synchronized|synchronized
+init|(
+name|lock
+init|)
 block|{
 name|rollLogDirIfNeeded
 argument_list|()
@@ -1189,6 +1633,7 @@ argument_list|)
 expr_stmt|;
 block|}
 block|}
+block|}
 annotation|@
 name|Override
 DECL|method|flush ()
@@ -1196,6 +1641,11 @@ specifier|public
 name|void
 name|flush
 parameter_list|()
+block|{
+synchronized|synchronized
+init|(
+name|lock
+init|)
 block|{
 comment|// currentOutStream is null if currentFSOutStream is null
 if|if
@@ -1229,6 +1679,7 @@ expr_stmt|;
 block|}
 block|}
 block|}
+block|}
 annotation|@
 name|Override
 DECL|method|close ()
@@ -1236,8 +1687,11 @@ specifier|public
 name|void
 name|close
 parameter_list|()
-throws|throws
-name|IOException
+block|{
+synchronized|synchronized
+init|(
+name|lock
+init|)
 block|{
 if|if
 condition|(
@@ -1270,6 +1724,7 @@ name|currentFSOutStream
 operator|=
 literal|null
 expr_stmt|;
+block|}
 block|}
 block|}
 block|}
