@@ -1102,6 +1102,9 @@ Release 2.8.0 - UNRELEASED
     HADOOP-12292. Make use of DeleteObjects optional.
     (Thomas Demoor via stevel)
 
+    HADOOP-12759. RollingFileSystemSink should eagerly rotate directories.
+    (Daniel Templeton via wang)
+
   OPTIMIZATIONS
 
     HADOOP-11785. Reduce the number of listStatus operation in distcp
